dz5/redmine-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redmine
spec:
  replicas: 1 
  selector:
    matchLabels:
      app: redmine
  strategy:
    type: Recreate
  template:
    metadata:
      labels: 
        app: redmine
    spec:
      containers:
      - image: redmine:4.1.1
        ports:
        - name: 
          containerPort: 3000
          protocol: TCP
        name: redmine
